import { CpslButton, CpslInput, CpslText } from '@getpara/react-components';
import { Card, OverflowText, ProfileInnerContainer } from './common';
import { AuthMethod, ParaCore, useAccount, useAddAuthMethod, useClient, useWallet } from '@getpara/react-sdk';
import { useEffect, useState } from 'react';
import { useViemClient } from '@getpara/react-sdk/evm';
import { useCosmjsProtoSigner } from '@getpara/react-sdk/cosmos';
import { useSolanaSigner } from '@getpara/react-sdk/solana';
import { sepolia } from 'viem/chains';
import { http } from 'viem';
import { createSolanaRpc, getUtf8Encoder } from '@solana/kit';
import bs58 from 'bs58';
...
