...
            Image(.paraLogo)
                .resizable()
                .frame(width: 85, height: 85)

            Spacer()

            Text("Sign Up or Log In")
                .font(.title2)
                .fontWeight(.semibold)
                .foregroundColor(.black)
                .padding(.bottom, 20)

            VStack(spacing: 20) {
...
